# assfid_ffed

./: .gitignore  Cargo.toml  Dockerfile.jetson  build.rs  compose.jetson.yml  deploy.sh  devcontainer.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
benches/: arw_to_tiff.rs
examples/: analyze_bit_depth.rs
src/: image_pipeline.rs  lib.rs  logger.rs  main.rs
src/cuda/kernels/: color_pipeline.cu  debayer_rggb_bilinear.cu  debayer_rggb_bilinear_unoptimized.cu
src/image_pipeline/: arw_to_tiff.rs  common.rs  conversions.rs  debayer.rs  raw.rs  tiff.rs
src/image_pipeline/arw_to_tiff/: error.rs  pipeline.rs  rawloader_reader.rs  reader.rs  standard_tiff_writer.rs  tests.rs  timing.rs  types.rs  writer.rs
src/image_pipeline/common/: error.rs
src/image_pipeline/conversions/: raw_to_tiff.rs
src/image_pipeline/debayer/: cpu_debayer.rs  cuda_debayer.rs  npp_debayer.rs  types.rs
src/image_pipeline/raw/: rawloader_reader.rs  reader.rs  types.rs
src/image_pipeline/tiff/: standard_tiff_writer.rs  types.rs  writer.rs
